QML: Allow conversion of symbols to QVariant

We produce their descriptiveString or simply a QVariant containing a
QJSValue, depending on whether we're supposed to convert objects without
equivalent C++ type or not.

Fixes: QTBUG-113854
Change-Id: I22b6038c936d860fdd8aa227f9dfe704e3265a77
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 8c451bba7aa6474c8aaec01b8fb02201e0237835)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>