src/qml/jsruntime/qv4engine_p.h
@@ -643,7 +643,7 @@ public:
 
     // variant conversions
     static QVariant toVariant(
-            const QV4::Value &value, QMetaType typeHint, bool createJSValueForObjects = true);
+        const QV4::Value &value, QMetaType typeHint, bool createJSValueForObjectsAndSymbols = true);
     QV4::ReturnedValue fromVariant(const QVariant &);
     QV4::ReturnedValue fromVariant(
             const QVariant &variant, Heap::Object *parent, int property, uint flags);
